clusters/sanzang/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: jackett
  ports:
    - port: 9117
      targetPort: 9117
